[gd_scene load_steps=2 format=3 uid="uid://d28f41evct6o"]

[ext_resource type="Script" path="res://UI/Ingredients/IngredientUI.gd" id="1_a7bil"]

[node name="IngredientUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7bil")

[node name="Shelf" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="FullTex" type="TextureRect" parent="Shelf"]
layout_mode = 2

[node name="IngName" type="Label" parent="Shelf"]
layout_mode = 2
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="IngCount" type="Label" parent="Shelf"]
layout_mode = 2
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HazyTex" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.364706)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="Shelf/FullTex" to="." method="_on_full_tex_gui_input"]
